--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,8 @@
 <body>
 <form action="/checkout" method="post">
-<label id="item" name="item">Item:</label>
-<input >
+<label id="item" name="item">Item:</label><br>
+<input id="item" type="text" name="item">
+<input type="submit">
 
 </form>
 </body>
