--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <form action="/checkout" method="post">
 <label id="item" name="item">Item:</label><br>
 <input id="item" type="text" name="item">
-<input type="submit">
+ <button type="submit" name="submit" value="submit">Submit</button>
 
 </form>
 </body>
